--- a/contents/css/styles.css
+++ b/contents/css/styles.css
@@ -13,7 +13,7 @@
     width: 100wh;
     background-color: #fbfbfb;
     padding: 3px;
-    gap: 3px;
+    gap: 6px;
 }
 
 /* Shared CSS */
@@ -52,6 +52,10 @@
     margin-bottom: 10px;
 }
 
+/* hr {
+    color: red;
+} */
+
 
 /* Vertical Navbar */
 
@@ -60,7 +64,7 @@
     flex-direction: column;
     height: 100%;
     width: 19%;
-    background-color: #fbfbfb;
+    background-color: #fff;
     padding: 3px;
 }
 
@@ -69,11 +73,10 @@
     flex-direction: row;
     justify-content: center;
     align-content: center;
-    height: 12%;
+    height: 10%;
     width: 100%;
     padding: 10px;
     gap: 12px;
-    background-color: #fbfbfb;
 }
 
 #logo {
@@ -97,10 +100,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 48%;
+    height: 50%;
     width: 100%;
     padding: 3px;
-    background-color: #fbfbfb;
 }
 
 .nav-list ul {
@@ -120,7 +122,7 @@
     align-items: center;
     padding: 10px 15px;
     font-size: 1.2rem;
-    background-color: #fbfbfb;
+    background-color: #fffdfd;
     border-radius: 8px;
     transition: background-color 0.3s ease, color 0.3s ease;
     transition: transform 0.3s ease;
@@ -455,7 +457,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 25%;
+    height: 30%;
     width: 100%;
 }
 
@@ -498,3 +500,53 @@
     font-size: 1rem;
     color:  #616060;
 }
+
+
+.calendar-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    width: 100%;
+    height: 52%;
+}
+
+
+.calendar-container p {
+    font-size: 1.2rem;
+    color: #424040;
+    margin-bottom: 20px;
+}
+
+.calendar-container table {
+    width: 70%;
+    border-collapse: collapse;
+}
+
+.calendar-container th, .calendar-container td {
+    padding: 8px;
+    text-align: center;
+    font-size: 1rem;
+    color: #424040;
+}
+
+.calendar-container th {
+    background-color: #f4f4f4;
+    font-weight: bold;
+}
+
+.calendar-container td {
+    background-color: #f9f9f9;
+}
+
+.calendar-container td:hover {
+    background-color: #d7cff4;
+    cursor: pointer;
+}
+
+
